--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -237,7 +237,7 @@
 						console.log('22222');
 						var noRead = document.getElementById("noRead_" + id);
 						noRead.className = "mui-badge mui-hidden"
-						utils.mOpenWithData("all.html", id)
+						utils.mOpenWithData("all-list.html", id)
 					}
 
 					//					utils.hrefSessionStorage("all.html", id);
