--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -55,9 +55,9 @@
 	<script src="../js/jquery-weui.min.js"></script>
 	<script src="../js/utils/store.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
-//		$(function() {
-//			
-//		});
+		//		$(function() {
+		//			
+		//		});
 		var tempModel = {};
 		mui.plusReady(function() {
 			tempModel = {
@@ -66,6 +66,34 @@
 			}
 			setUUID();
 		});
+		document.addEventListener("plusready", function() {
+			message = document.getElementById("message");
+			// 监听点击消息事件
+			plus.push.addEventListener("click", function(msg) {
+				// 判断是从本地创建还是离线推送的消息
+				switch(msg.payload) {
+					case "LocalMSG":
+						outSet("点击本地创建消息启动：");
+						break;
+					default:
+						outSet("点击离线推送消息启动：");
+						break;
+				}
+				// 提示点击的内容
+				plus.ui.alert(msg.content);
+				// 处理其它数据
+				logoutPushMsg(msg);
+			}, false);
+			// 监听在线消息事件
+			plus.push.addEventListener("receive", function(msg) {
+				if(msg.aps) { // Apple APNS message
+					outSet("接收到在线APNS消息：");
+				} else {
+					outSet("接收到在线透传消息：");
+				}
+				logoutPushMsg(msg);
+			}, false);
+		}, false);
 		document.getElementById("login").addEventListener('tap', function(event) {
 			console.log("登录");
 			var tempName = document.getElementById("account").value;
@@ -105,25 +133,25 @@
 							postDataEncry('Login', enData1, comData1, 0, function(data1) {
 								$.hideLoading();
 								if(data1.RspCode == 0) {
-									if (data1.RspData.dpts == null) {
+									if(data1.RspData.dpts == null) {
 										data1.RspData.dpts = [];
 									}
-									if (data1.RspData.grds == null) {
+									if(data1.RspData.grds == null) {
 										data1.RspData.grds = [];
 									}
-									if (data1.RspData.clss == null) {
+									if(data1.RspData.clss == null) {
 										data1.RspData.clss = [];
 									}
-									if (data1.RspData.subs == null) {
+									if(data1.RspData.subs == null) {
 										data1.RspData.subs = [];
 									}
-//									if (data1.RspData.clss.length>0) {
-//										data1.RspData.grds = data1.RspData.grds.concat(data1.RspData.clss);
-//									}
-									if (data1.RspData.urolestr == null) {
+									//									if (data1.RspData.clss.length>0) {
+									//										data1.RspData.grds = data1.RspData.grds.concat(data1.RspData.clss);
+									//									}
+									if(data1.RspData.urolestr == null) {
 										data1.RspData.urolestr = '00000000000000000000000000000';
 									}
-									
+
 									store.set(window.storageKeyName.PERSONALINFO, data1.RspData);
 									utils.hrefSessionStorage('home.html', {});
 								} else {
