--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -75,8 +75,8 @@
 					<div class="weui-cell__bd">
 						<div class="weui-uploader">
 							<div class="weui-uploader__hd">
-								<div style="width: 65%">
-								<input style="width: 200px;" id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)"><span style="color: dodgerblue;">@上传附件</span>
+								<div style="width: 65%;">
+								<input style="width: 200px;" id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)"><span style="color: dodgerblue;font-size: 15px;">@上传附件</span>
 								</div>
 								<div style="width: 35%">
 									<div style="width: 30px;"><input v-model="smsSync" type="checkbox" style="font-size: 15px;" /></div>
